# perchance-interpreter

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPEC.md  build-frontend.py  build-frontend.sh  download_generators.py
.github/workflows/: ci.yml  deploy-frontend.yml  frontend.yml
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: AnsiRenderer.tsx  App.tsx  AutocompleteDropdown.tsx  TraceView.tsx
perchance-wasm/: Cargo.toml
perchance-wasm/src/: lib.rs
src/: ast.rs  compiler.rs  diagnostic.rs  evaluator.rs  evaluator.rs.backup  lib.rs  loader.rs  parser.rs  span.rs  trace.rs
src/builtin_generators/: abstract-noun.perchance  animal.perchance  archaic-word.perchance  body-part.perchance  color-name.perchance  color.perchance  common-noun.perchance  concrete-noun.perchance  country.perchance  dinosaur.perchance  emotion.perchance  endangered-animal.perchance  english-town-name.perchance  fruit.perchance  greek-god.perchance  greek-monster.perchance  greek-titan.perchance  ingredient.perchance  land-animal.perchance  mod.rs  monster-edited.perchance  monster-type.perchance  nationality.perchance  nautical-term.perchance  netflix-category.perchance  noun.perchance  object.perchance  occupation.perchance  person-adjective.perchance  planet-name.perchance  room-type.perchance  sci-fi-noun.perchance  simple-gen-footer.perchance  terrain.perchance  type-of-art-edited.perchance  uncountable-noun.perchance  unusual-animal.perchance  vegetable.perchance  venue.perchance
src/evaluator/: content_impl.rs  error.rs  evaluate_impl.rs  expression_impl.rs  grammar.rs  helpers_impl.rs  import_impl.rs  list_impl.rs  mod.rs  property_impl.rs  trace_impl.rs  value.rs
tests/: if_else_tests.rs  import_tests.rs  integration_tests.rs  list_available_tests.rs  new_features_tests.rs  output_priority_tests.rs  repeat_tests.rs  trace_tests.rs
