[package]
name = "perchance-interpreter"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
async-trait = "0.1"
async-recursion = "1.0"

# Optional tokio support for file-based loader (not available on WASM)
tokio = { version = "1", features = [
    "rt",
    "macros",
    "fs",
    "rt-multi-thread",
], optional = true }

[features]
default = ["tokio-runtime", "builtin-generators"]
tokio-runtime = ["tokio"]
builtin-generators = []

[dev-dependencies]
tokio = { version = "1", features = ["rt", "fs", "macros", "rt-multi-thread"] }
tokio-test = "0.4"

[[bin]]
name = "perchance"
path = "src/bin/main.rs"
required-features = ["tokio-runtime"]
